rest api 3 half

--- a/Golang/HTTP-REST-API/Makefile
+++ b/Golang/HTTP-REST-API/Makefile
@@ -1,10 +1,13 @@
 .PHONY: build
-
 build:
 	go build ./cmd/apiserver
 
+.PHONY: tidy
+tidy:
+	go mod tidy
+
 .PHONY: test
-test:
-	go test -v -race -timeout 30s ./ ...
+test: tidy
+	go test -v -race -timeout 30s ./...
 
 .DEFAULT_GOAL := build
