--- a/js/Words/package.json
+++ b/js/Words/package.json
@@ -2,15 +2,16 @@
   "name": "itproger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node main.js",
+    "dev": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "currency-converter-lt": "^2.0.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.0"
   },
